# univ

./: .gitignore  Forum.odb  Plus proche nombre.py  accueil.html  echecs.odb  facture.py  georep.py  index.html  lexi.py  racine.py  robot.py  syntaxe_while.py
Algorithmique des tableaux/: test cc2.py
Algorithmique des tableaux/TEA 1/: des_chiffres_et_des_lettres_t9.py
Algorithmique des tableaux/TEA 2/: TEA2_Agathe_Perrin.py  polynomes.py
Algorithmique des tableaux/TP 4/: ensemble.py
Algorithmique des tableaux/TP1/: Installations préliminaires.py
Algorithmique/Projet/: projet.ipynb - Colaboratory.html
Algorithmique/TP1/: TP graphes.ipynb  brouillon.txt
Algorithmique/TP2/: TP_complexite.ipynb  brouillon.txt
Analyse de donnees - programmeur/1-Tableaux et Espaces/: TP.txt  TP1-correction.txt  TP1.ipynb  TP1_m.ipynb
Analyse de donnees - programmeur/2-Reduction de la Dimensionalité/: TP.txt  TP2.ipynb
Analyse de donnees - programmeur/3-Apprentissage non supervise/: MLlogiciel.xls  TP34.ipynb
Analyse de donnees - programmeur/4-Apprentissage supervise/: TP4-2021.ipynb
Analyse de données - utilisateur/CC1/: revision_ad.docx
Analyse de données - utilisateur/TD1/: td1.txt
Analyse de données - utilisateur/TD2/: TD2-notes.xls  notes.ows
Analyse de données - utilisateur/TD3/: TD3-films.xls
Analyse de données - utilisateur/TDTP5/: TD5-2d.xls  tp5.ows
Analyse de données - utilisateur/TDTP6/: TD6.ows  TP6.ows
Analyse de données - utilisateur/TP1/: anscombe7.xls  heart_disease.ows
Analyse de données - utilisateur/TP2/: donnes_quantitatives.ows
Analyse de données - utilisateur/TP3/: housetasks.xls  terminale.xls  tp3.ows
Analyse de données - utilisateur/TP4/: clustering.ows
Architecture et developpement web/: phpmyadmin.txt
Architecture et developpement web/TEA_guide/: _sitewebshop.sql
Architecture et developpement web/TP6/: Personne.php  PersonneManager.php  database.php  index.php
Architecture et developpement web/TP8 - php objet/: index.php  voyage.sql
Architecture et developpement web/TP9/: voyage.sql
Architecture et systemes avances l3/: JSimRisc.txt
Architecture et systemes avances l3/DM2/: 2020 - DM2.s
Architecture et systemes avances l3/DM3/: 2020-DM2.s  2020-DM2.s.mem  Q4.txt
Architecture et systemes avances l3/TP1/: fibo.c  fibonnaci.s  listing1.c  listing1.s  listing1.s.nbexe
English - L3/: Assesment Outline L3 Semester 5.odt  FairTradeCards.txt
Exercices (python)/: and,or, not.py  année_bissextile.py  voiture.py
Exercices_tests/: année_bissextile.py
Framework web/: PenseBete.txt  oral.docx
Gestion de projet/: prep_oral.docx  ~$ep_oral.docx
Programmation en language C/: Afficher_la_valeur.txt  old.txt
Programmation en language C/Old-versions/ProjetC/ProjetC/src/LibraryRoman/: CMakeLists.txt  library-roman-numeration.c
Programmation en language C/ProjetC/ProjetC/: CMakeLists.txt  main.c
Programmation en language C/ProjetC/ProjetC/ProjetC/: CMakeLists.txt  affichage.h
Programmation en language C/ProjetC/ProjetC/ProjetC/include/: library-fr-african.h
Programmation en language C/ProjetC/ProjetC/lib/: liblibrary-fr-African.dylib  liblibrary-fr-BE.dylib  liblibrary-fr-FR.dylib  liblibrary-fr-date.dylib
Programmation en language C/ProjetC/ProjetC/src/library-fr-african/: CMakeLists.txt  library-fr-african.c
Programmation en language C/ProjetC/ProjetC/src/library-fr-be/: CMakeLists.txt
Programmation en language C/ProjetC/ProjetC/src/library-fr-date/: CMakeLists.txt  library-fr-date.h
Programmation en language C/ProjetC/ProjetC/src/library-fr-fr/: CMakeLists.txt  library-fr-fr.c  library-fr-fr.h
Programmation en language C/ProjetC/ProjetC/src/library-fr-roman/: CMakeLists.txt  library-fr-roman.c
Programmation en language C/old-ProjetC/ProjetC/ProjetC/: Affichage.c  CMakeLists.txt
Programmation en language C/old-ProjetC/ProjetC/ProjetC/src/LibraryFr/: library-fr-FR.c
Programmation en language C/old-ProjetC/ProjetC/ProjetC/src/LibraryFrBelge/: CMakeLists.txt
Programmation en language C/old-ProjetC/ProjetC/src/LibraryFr/: CMakeLists.txt
Programmation en language C/old-ProjetC/ProjetC/src/LibraryFrAfrican/: CMakeLists.txt
Programmation en language C/old2-ProjetC/ProjetC/src/library-fr-be/: CMakeLists.txt  library-fr-be.c
Programmation en language C/old2-ProjetC/ProjetC/src/library-fr-roman/: CMakeLists.txt
Programmation en language C/old2-ProjetC/docs/: CMakeLists.txt  Doxyfile
Programmation en language C/old2-ProjetC/docs/html/: dir_5189a50cc59ede9facf637c895309828.html  index.html  main_8h_source.html
Programmation en language C/old2-ProjetC/docs/latex/: dir_5189a50cc59ede9facf637c895309828.tex  refman.tex
Programmation en language C/old2-ProjetC/docs/source/: conf.py  index.rst
Programmation en language C/projet_guldan/src/ga/: CMakeLists.txt  ga.inc
Projet ISI - Site à compléter/: bilan.html  etd.html  index.html  lien vers site déployé.txt
Projet Web/: index.html
Python/: Il devine.py  Je devine.py  bases_liste.py  fonctions.py  georep.py  nombres_premiers.py  parcours_liste.py  serie_pi_2.py  suite.py  syntaxe_for.py  titanic.py  titanic_suite.py  turtle_liste.py
Reseaux/: pense_bete.txt
Reseaux/TEA2/: TEA2.docx
Structure de donnees avancee/TEA/tea/: CMakeLists.txt  README.rst
Structure de donnees avancee/TEA/tea/debug/: CPackConfig.cmake  CPackSourceConfig.cmake
Structure de donnees avancee/TEA/tea/src/: CMakeLists.txt
Structure de donnees avancee/TEA/tea/src/treeRB/: CMakeLists.txt  TreeRB.pc.in  TreeRBConfig.cmake.in  main.c  max.h  treeBicolor.c  treeBicolor.h  treeBicolor.inc
TP Simulateur ASM/: Adressage_immediat.ASM  Entrées-sorties et sauts conditionnels.ASM  HelloWorld.ASM  PROJET.ASM  Port d'E.S Décodeurs 7 segments.ASM  Timer.ASM  document.txt  sms32v50.INI
TP1/: Entreprise_LDD.sql  entreprise.sql  gestion.sql  pgAdmin.txt
calcul_scientifique/: [ENONCE] TP1 Algorithme du pivot de Gauss - Fonctions préparatoires.ipynb  [ENONCE] TP4 Opérations matricielles.ipynb
site/: accueil.html  contact.html  contributions.html  equipe.html  index.html  main.css
(+1278 files in other folders)
